--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generateContent": "node ./scripts/generateContent.js",
+    "fetchBlog": "node ./scripts/fetchBlog.js"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "autoprefixer": "10.4.15",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "express": "^4.18.2",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.4.5",
     "next": "13.4.19",
+    "openai": "^4.2.0",
+    "os": "^0.1.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
